# ITMO_ICT_WebDevelopment_2024-2025

./: .gitignore  404.html  index.html  pyproject.toml
app/account_management/: index.html
app/authentication/: index.html
app/registration/: index.html
app/skills/: index.html
app/warriors_professions/: index.html
app/warriors_skills/: index.html
lab1/: index.html
lab2/: index.html
lab3/: index.html
lab4/: index.html
leetcode/: index.html
pr/: index.html
search/: search_index.json
students/k3340/Fedorin_Kirill/lr_1/task2/: client.py
students/k3340/Fedorin_Kirill/lr_1/task3/: index.html  server.py
students/k3340/Fedorin_Kirill/lr_1/task4/: server.py
students/k3340/Fedorin_Kirill/lr_1/task5/: server.py
students/k3340/laboratory_works/Fedorin_Kirill/docs/: mkdocs.yml
students/k3340/laboratory_works/Fedorin_Kirill/docs/docs/: index.md  lab1.md  lab2.md  lab3.md  lab4.md  leetcode.md  pr.md
students/k3340/laboratory_works/Fedorin_Kirill/docs/site/: 404.html  index.html
students/k3340/laboratory_works/Fedorin_Kirill/lr_1/: README.md
students/k3340/laboratory_works/Fedorin_Kirill/lr_1/lr_1/: mkdocs.yml
students/k3340/laboratory_works/Fedorin_Kirill/lr_1/task1/: client.py  server.py
students/k3340/laboratory_works/Fedorin_Kirill/lr_1/task2/: server.py
students/k3340/laboratory_works/Fedorin_Kirill/lr_2/: README.md
students/k3340/laboratory_works/Fedorin_Kirill/lr_4/: package-lock.json
students/k3340/practical_works/Fedorin_Kirill/simple_django_project/: db.sqlite3
(+121 files in other folders)
