[tool.poetry]
name = "itmo-web"
version = "0.1.0"
description = ""
authors = ["Kiraprint <kirill.fdrn@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.48"
psycopg2-binary = "^2.9.10"
django-bootstrap4 = "^24.4"
psycopg2 = "^2.9.10"
drf-yasg = "^1.21.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
