[tool.poetry]
name = "itmo-web"
version = "0.1.0"
description = ""
authors = ["Kiraprint <kirill.fdrn@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "1.6.1"
mkdocs-material = "^9.5.48"
psycopg2-binary = "^2.9.10"
django-bootstrap4 = "^24.4"
psycopg2 = "^2.9.10"
drf-yasg = "1.21.8"
django-extensions = "^3.2.3"
asgiref = "3.8.1"
click = "8.1.7"
django = "5.1.3"
djangorestframework = "3.15.2"
ghp-import = "2.1.0"
inflection = "0.5.1"
jinja2 = "3.1.4"
markdown = "3.7"
markupsafe = "3.0.2"
mergedeep = "1.3.4"
mkdocs-get-deps = "0.2.0"
packaging = "24.2"
pathspec = "0.12.1"
platformdirs = "4.3.6"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
pyyaml = "6.0.2"
pyyaml-env-tag = "0.1"
six = "1.16.0"
sqlparse = "0.5.2"
uritemplate = "4.1.1"
watchdog = "6.0.0"
djoser = "^2.3.1"
django-filter = "^24.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
